--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400&display=swap');
+
+html {
+
+}
 body {
     background-image: url("https://krot.info/uploads/posts/2020-10/1603671259_9-p-fon-minimalizm-dlya-prezentatsii-16.jpg");
     background-position: center;
     background-repeat: no-repeat;
+    zoom: 85%;
+
 }
 
 .container {
     height: 100vh;
+    margin: 10vh 0;
     font-family: 'Kanit', sans-serif;
     display: flex;
     justify-content: center;
